# matter-over-wifi

./: .gitignore  Project Plan for a Matter-Enabled Microcontroller System.docx  Project_Plan.md  README.md  build_firmware.ps1  build_firmware_junc.ps1  run_build.bat  run_build2.bat
docs/: USER_MANUAL.md  WIRING_GUIDE.md
docs/plans/: 2026-03-13-project-fix.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
firmware/main/config/: board_config.h
firmware/main/hal/: hal_esp32c3.cpp  hal_esp32c6.cpp  hal_esp32s3.cpp  hal_interface.h
firmware/main/led_engine/: led_engine.cpp  led_engine.h  music_sync.cpp  music_sync.h
firmware/main/matter/: matter_device.cpp  matter_device.h
firmware/main/network/: network_manager.cpp  network_manager.h
firmware/main/storage/: storage_manager.cpp  storage_manager.h
firmware/main/util/: error_codes.h  logging.h
test/unit/: CMakeLists.txt  test_led_engine.cpp
